--- a/Landing_Page/src/style.css
+++ b/Landing_Page/src/style.css
@@ -1,141 +1,184 @@
 /* Estilos CSS aqui */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-        padding: 0;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    margin-bottom: 20px;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  margin-bottom: 20px;
 }
 
 header h1 {
-    margin: 0;
-    color: white;
-    position: relative;
+  margin: 0;
+  color: white;
+  position: relative;
 }
 
 header i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-40%);
-    color: white;
-    font-size: medium;
-    cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-40%);
+  color: white;
+  font-size: medium;
+  cursor: pointer;
 }
 
 #user-menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    right: 20px;
-    top: 50px;
-    background-color: #444;
-    border: 1px solid #333;
-    width: 150px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  background-color: #444;
+  border: 1px solid #333;
+  width: 150px;
 }
 
 #user-menu li {
-    padding: 10px;
-    border-bottom: 1px solid #333;
+  padding: 10px;
+  border-bottom: 1px solid #333;
 }
 
 #user-menu li:last-child {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 #user-menu a {
-    color: white;
-    text-decoration: none;
-    display: block;
+  color: white;
+  text-decoration: none;
+  display: block;
 }
 
 #user-menu li:hover {
-    background-color: #555;
+  background-color: #555;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .show {
-    display: block;
+  display: block;
 }
 
 main {
-    width: 100%;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
 }
 
 aside {
-    max-width: 250px;
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-right: 1px solid #ddd;
-    float: left;
+  max-width: 250px;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-right: 1px solid #ddd;
+  float: left;
 }
 
 section#jogos {
-    margin-left: 270px;
-    padding: 20px;
+  margin-left: 270px;
+  padding: 20px;
 }
 
 .game-card {
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 16px;
-    margin-bottom: 16px;
-    overflow: hidden;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 16px;
+  margin-bottom: 16px;
+  overflow: hidden;
 }
 
 .game-card img {
-    margin-top: px;
-    height: 100px;
-    object-fit: cover;
-    margin-right: 20px;
-    float: left;
+  margin-top: px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 20px;
+  float: left;
 }
 
 .game-details {
-    float: left;
-    width:initial;
+  float: left;
+  width: initial;
 }
 
 #pagination {
-    text-align:center;
-    margin-top: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #pagination a {
-    padding-inline: 10px;
+  padding-inline: 10px;
 }
 
-
-.game-title{
-    vertical-align: middle;
-    display: inline-block;
+.game-title {
+  vertical-align: middle;
+  display: inline-block;
 }
 
-i{
-    font-size: medium;
-    padding-left: 15px;
-    float: right;
+i {
+  font-size: medium;
+  padding-left: 15px;
+  float: right;
 }
 
 .fa-star {
-    color: rgb(182, 178, 178);
+  color: rgb(182, 178, 178);
 }
 
 .favorite {
-    color: rgb(240, 240, 13);
+  color: rgb(240, 240, 13);
 }
 
 
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* display: none; */
+  background: #010a13a0;
+  box-shadow: 0px 4px 18px #5681b0;
+  padding: 60px;
+}
+
+.modal-form {
+    display: grid;
+    grid-column: 1;
+    gap: 15px;
+    margin-bottom: 55px;
+}
+
+.modal-form input {
+    height: 24px;
+    color: var(--corclara, #eaf4f6);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+
+.button {
+    margin: 0;
+    margin-top: 20px;
+    border: 2px;
+    border-radius: 10px;
+    cursor: pointer;/* Começar */    
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;    
+    text-align: center;
+}
+.button:hover{
+    border: 2px solid #0397AB; 
+    box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5); 
+}
