--- a/Landing_Page/src/style.css
+++ b/Landing_Page/src/style.css
@@ -142,11 +142,12 @@ i {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  /* display: none; */
+  transform: translate(-50%, -40%);
+  display: none;
   background: #010a13a0;
   box-shadow: 0px 4px 18px #5681b0;
   padding: 60px;
+  
 }
 
 .modal-form {
@@ -181,4 +182,40 @@ i {
 .button:hover{
     border: 2px solid #0397AB; 
     box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5); 
+}
+
+.close-modal {
+    position: absolute;  
+    top: 10px;
+    right: 10px;
+    margin: 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
+    line-height: 24px;    
+    text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 10px;
+  text-align: center; /* Centraliza os itens dentro do nav */
+}
+
+nav ul li {
+  display: inline-block;
+   /* Ajuste este valor conforme necessário */
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.logo {
+  margin-bottom: 15px;
 }
