--- a/Landing_Page/src/style.css
+++ b/Landing_Page/src/style.css
@@ -94,19 +94,51 @@ section#jogos {
   margin-top: 16px;
   margin-bottom: 16px;
   overflow: hidden;
+  position: relative;
+  display: table;
+  width: 100%;
 }
 
-.game-card img {
-  margin-top: px;
+.img-container, .game-details, .price-history {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.img-container {
+  padding: 10px;
+}
+
+.img-container img {
   height: 100px;
   object-fit: cover;
-  margin-right: 20px;
-  float: left;
 }
 
 .game-details {
-  float: left;
-  width: initial;
+  width: 40%;
+  padding: 10px;
+}
+
+.fa-star {
+  padding: 20px;
+  color: rgb(182, 178, 178);
+}
+
+.favorite {
+  color: rgb(240, 240, 13);
+}
+
+.price-history {
+  width: 40%;
+  padding: 10px;
+  text-align: center;
+}
+
+.min-price {
+  font-size: medium;
+}
+
+.price-history .slider-container {
+  margin-top: 10px;
 }
 
 #pagination {
@@ -118,25 +150,13 @@ section#jogos {
   padding-inline: 10px;
 }
 
-.game-title {
-  vertical-align: middle;
-  display: inline-block;
-}
+
 
 i {
   font-size: medium;
   padding-left: 15px;
   float: right;
 }
-
-.fa-star {
-  color: rgb(182, 178, 178);
-}
-
-.favorite {
-  color: rgb(240, 240, 13);
-}
-
 
 .modal {
   position: fixed;
@@ -219,3 +239,4 @@ nav ul li a {
 .logo {
   margin-bottom: 15px;
 }
+
