--- a/Landing_Page/src/jogos_page/jogos.css
+++ b/Landing_Page/src/jogos_page/jogos.css
@@ -1,79 +1,11 @@
+@import url('../header/header.css');
 /* Estilos CSS aqui */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
   }
-  /* Estilos CSS aqui */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
   
-  header {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    margin-bottom: 20px;
-  }
-  
-  header h1 {
-    margin: 0;
-    color: white;
-    position: relative;
-  }
-  
-  header i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-40%);
-    color: white;
-    font-size: medium;
-    cursor: pointer;
-  }
-  
-  #user-menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    right: 20px;
-    top: 50px;
-    background-color: #444;
-    border: 1px solid #333;
-    width: 150px;
-  }
-  
-  #user-menu li {
-    padding: 10px;
-    border-bottom: 1px solid #333;
-  }
-  
-  #user-menu li:last-child {
-    border-bottom: none;
-  }
-  
-  #user-menu a {
-    color: white;
-    text-decoration: none;
-    display: block;
-  }
-  
-  #user-menu li:hover {
-    background-color: #555;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
-  .show {
-    display: block;
-  }
   
   main {
     width: 100%;
@@ -125,6 +57,7 @@ body {
   }
   
   .fa-star {
+    cursor: pointer;
     padding: 20px;
     color: rgb(182, 178, 178);
   }
@@ -247,241 +180,6 @@ body {
   }
   
   
-  header {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    margin-bottom: 20px;
-  }
   
-  header h1 {
-    margin: 0;
-    color: white;
-    position: relative;
-  }
-  
-  header i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-40%);
-    color: white;
-    font-size: medium;
-    cursor: pointer;
-  }
-  
-  #user-menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    right: 20px;
-    top: 50px;
-    background-color: #444;
-    border: 1px solid #333;
-    width: 150px;
-    z-index: 1;
-  }
-  
-  #user-menu li {
-    padding: 10px;
-    border-bottom: 1px solid #333;
-  }
-  
-  #user-menu li:last-child {
-    border-bottom: none;
-  }
-  
-  #user-menu a {
-    color: white;
-    text-decoration: none;
-    display: block;
-  }
-  
-  #user-menu li:hover {
-    background-color: #555;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
-  .show {
-    display: block;
-  }
-  
-  main {
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  aside {
-    max-width: 250px;
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-right: 1px solid #ddd;
-    float: left;
-  }
-  
-  section#jogos {
-    margin-left: 270px;
-    padding: 20px;
-  }
-  
-  .game-card {
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 16px;
-    margin-bottom: 16px;
-    overflow: hidden;
-    position: relative;
-    display: table;
-    width: 100%;
-    z-index: -1;
-  }
-  
-  .img-container, .game-details, .price-history {
-    display: table-cell;
-    vertical-align: middle;
-  }
-  
-  .img-container {
-    padding: 10px;
-  }
-  
-  .img-container img {
-    height: 100px;
-    object-fit: cover;
-  }
-  
-  .game-details {
-    width: 40%;
-    padding: 10px;
-  }
-  
-  .fa-star {
-    padding: 20px;
-    color: rgb(182, 178, 178);
-  }
-  
-  .favorite {
-    color: rgb(240, 240, 13);
-  }
-  
-  .price-history {
-    width: 40%;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .min-price {
-    font-size: medium;
-  }
-  
-  .price-history .slider-container {
-    margin-top: 10px;
-  }
-  
-  #pagination {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  #pagination a {
-    padding-inline: 10px;
-  }
-  
-  
-  
-  i {
-    font-size: medium;
-    padding-left: 15px;
-    float: right;
-  }
-  
-  .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -40%);
-    display: none;
-    background: #010a13a0;
-    box-shadow: 0px 4px 18px #5681b0;
-    padding: 60px;
-    
-  }
-  
-  .modal-form {
-      display: grid;
-      grid-column: 1;
-      gap: 15px;
-      margin-bottom: 55px;
-  }
-  
-  .modal-form input {
-      height: 24px;
-      color: var(--corclara, #eaf4f6);
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-  }
-  
-  
-  .button {
-      margin: 0;
-      margin-top: 20px;
-      border: 2px;
-      border-radius: 10px;
-      cursor: pointer;/* Começar */    
-      font-style: normal;
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 24px;    
-      text-align: center;
-  }
-  .button:hover{
-      border: 2px solid #0397AB; 
-      box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5); 
-  }
-  
-  .close-modal {
-      position: absolute;  
-      top: 10px;
-      right: 10px;
-      margin: 2px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-style: normal;
-      font-weight: bolder;
-      font-size: 20px;
-      line-height: 24px;    
-      text-align: center;
-  }
-  
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 10px;
-    text-align: center; /* Centraliza os itens dentro do nav */
-  }
-  
-  nav ul li {
-    display: inline-block;
-     /* Ajuste este valor conforme necessário */
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-  }
-  
-  .logo {
-    margin-bottom: 15px;
-  }
   
   
