--- a/Landing_Page/src/header/header.css
+++ b/Landing_Page/src/header/header.css
@@ -103,9 +103,16 @@ header i {
   left: 10%;
 }
 
+.page-logo a {
+  display: block; /* Garante que o <a> seja um bloco, cobrindo toda a área do filho */
+}
+
 .page-logo img {
   width: 100px;
+  display: block; /* Remove espaçamento indesejado ao redor da imagem */
 }
+
+
 
 nav ul {
   list-style: none;
@@ -130,4 +137,64 @@ nav ul li a {
 .title a:visited,
 .title a:active {
   text-decoration: none;
+}
+
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  display: none;
+  background: #010a13a0;
+  box-shadow: 0px 4px 18px #5681b0;
+  padding: 60px;
+  z-index: 1;
+}
+
+.modal-form {
+    gap: 15px;
+    margin-bottom: 55px;
+}
+
+.modal-form input {
+    margin: 5px;
+    height: 24px;
+    color: var(--corclara, #eaf4f6);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+
+.button {
+    margin: 0;
+    margin-top: 20px;
+    border: 2px;
+    border-radius: 10px;
+    cursor: pointer;/* Começar */    
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;    
+    text-align: center;
+}
+.button:hover{
+    border: 2px solid #0397AB; 
+    box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5); 
+}
+
+.close-modal {
+    position: absolute;  
+    top: 10px;
+    right: 10px;
+    margin: 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
+    line-height: 24px;    
+    text-align: center;
 }
