--- a/Landing_Page/src/jogos_page/jogos.css
+++ b/Landing_Page/src/jogos_page/jogos.css
@@ -95,6 +95,21 @@ body {
     padding-left: 15px;
     float: right;
   }
+
+  #modal-message {
+    max-width: max-content;
+    position: fixed;
+    padding: 10px;
+    background-color: #323764;
+    top: 20%;
+    z-index: 9999;
+    text-align: center;
+  }
+  
+  #message {
+    color: white;
+    display: inline;
+  }
   
 
   
