--- a/Landing_Page/src/header/header.css
+++ b/Landing_Page/src/header/header.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #6a70b5;
+  font-family: Arial, sans-serif;
+  margin: 0 auto;
+}
+
 header {
   background-color: #0f0d3d;
   color: white;
@@ -13,7 +19,7 @@ header h1 {
   padding-inline-end: 10%;
   color: white;
   position: relative;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 header i {
@@ -26,13 +32,11 @@ header i {
   cursor: pointer;
 }
 
-
 #user-menu {
   list-style-type: none;
   padding: 0;
   margin: 0;
   position: absolute;
-  right: 20px;
   top: 50px;
   background-color: #444;
   border: 1px solid #333;
@@ -57,6 +61,7 @@ header i {
 
 #user-menu li:hover {
   background-color: #555;
+  cursor: pointer;
 }
 
 .hidden {
@@ -74,13 +79,11 @@ header i {
   text-decoration: none; /* Remove o sublinhado dos links */
 }
 
-
-
 .title-text .highlight {
-  color: #d81818;
+  color: rgb(195, 3, 80);
   background-color: #fff0f0;
   padding: 5px 10px;
-  border: 2px solid #d04c0f;
+  border: 2px solid rgb(254, 61, 106);
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   font-weight: bold;
@@ -88,13 +91,11 @@ header i {
   transition: transform 0.8s, background-color 0.2s;
 }
 
-
 .title-text:hover {
   transform: scale(1.1);
-  color: #d81818; 
+  color: rgb(254, 61, 106);
   cursor: pointer;
 }
-
 
 .page-logo {
   display: inline-block;
@@ -111,8 +112,6 @@ header i {
   width: 100px;
   display: block; /* Remove espaçamento indesejado ao redor da imagem */
 }
-
-
 
 nav ul {
   list-style: none;
@@ -132,6 +131,13 @@ nav ul li a {
   padding: 10px;
 }
 
+nav ul li :hover{
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: bolder;
+}
+
 /* Remove default link colors */
 .title a:link,
 .title a:visited,
@@ -140,7 +146,7 @@ nav ul li a {
 }
 
 .modal {
-  max-width:min-content;
+  max-width: min-content;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -153,48 +159,47 @@ nav ul li a {
 }
 
 .modal-form {
-    margin-bottom: 55px;
-    display: block;
-    text-align: center;
+  margin-bottom: 55px;
+  display: block;
+  text-align: center;
 }
 
 .modal-form input {
-    margin: 5px;
-    height: 24px;
-    color: var(--corclara, #eaf4f6);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  margin: 5px;
+  height: 24px;
+  color: var(--corclara, #eaf4f6);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-
 
 .button {
-    margin-top: 20px;
-    border: 2px;
-    border-radius: 10px;
-    cursor: pointer;/* Começar */    
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;    
-    text-align: center;
+  margin-top: 20px;
+  border: 2px;
+  border-radius: 10px;
+  cursor: pointer; /* Começar */
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
 }
-.button:hover{
-    border: 2px solid #0397AB; 
-    box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5); 
+.button:hover {
+  border: 2px solid #0397ab;
+  box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5);
 }
 
 .close-modal {
-    position: absolute;  
-    top: 10px;
-    right: 10px;
-    margin: 2px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-style: normal;
-    font-weight: bolder;
-    font-size: 20px;
-    line-height: 24px;    
-    text-align: center;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: bolder;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
 }
