--- a/Landing_Page/src/header/header.css
+++ b/Landing_Page/src/header/header.css
@@ -34,10 +34,11 @@ header i {
 
 #user-menu {
   list-style-type: none;
+  right:13%;
+  top: 65%;
   padding: 0;
   margin: 0;
   position: absolute;
-  top: 50px;
   background-color: #444;
   border: 1px solid #333;
   width: 150px;
@@ -145,61 +146,3 @@ nav ul li :hover{
   text-decoration: none;
 }
 
-.modal {
-  max-width: min-content;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -40%);
-  display: none;
-  background: #010a13a0;
-  box-shadow: 0px 4px 18px #5681b0;
-  padding: 60px;
-  z-index: 1;
-}
-
-.modal-form {
-  margin-bottom: 55px;
-  display: block;
-  text-align: center;
-}
-
-.modal-form input {
-  margin: 5px;
-  height: 24px;
-  color: var(--corclara, #eaf4f6);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.button {
-  margin-top: 20px;
-  border: 2px;
-  border-radius: 10px;
-  cursor: pointer; /* Começar */
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
-  text-align: center;
-}
-.button:hover {
-  border: 2px solid #0397ab;
-  box-shadow: 0 0 10px 5px rgba(3, 151, 171, 0.5);
-}
-
-.close-modal {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  margin: 2px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-style: normal;
-  font-weight: bolder;
-  font-size: 20px;
-  line-height: 24px;
-  text-align: center;
-}
