--- a/Landing_Page/src/header/header.css
+++ b/Landing_Page/src/header/header.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #6a70b5;
+  background-color: #1b2838;
   font-family: Arial, sans-serif;
   margin: 0 auto;
 }
@@ -39,15 +39,17 @@ header i {
   padding: 0;
   margin: 0;
   position: absolute;
-  background-color: #444;
-  border: 1px solid #333;
   width: 150px;
   z-index: 1;
+  background-color: #fff0f0;
+  border: 3px solid rgb(254, 61, 106);
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 #user-menu li {
   padding: 10px;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid rgb(254, 61, 106);
 }
 
 #user-menu li:last-child {
@@ -55,13 +57,14 @@ header i {
 }
 
 #user-menu a {
-  color: white;
+  color: #0f0d3d;
   text-decoration: none;
+  font-weight: bolder;
   display: block;
 }
 
 #user-menu li:hover {
-  background-color: #555;
+  background-color: rgba(254, 61, 106, 0.4);
   cursor: pointer;
 }
 
@@ -74,10 +77,10 @@ header i {
 }
 
 .title-text {
-  display: inline-block; /* Permite a aplicação de transformações */
+  display: inline-block;
   transition: transform 0.8s, color 0.2s;
-  color: inherit; /* Herda a cor do pai */
-  text-decoration: none; /* Remove o sublinhado dos links */
+  color: inherit;
+  text-decoration: none;
 }
 
 .title-text .highlight {
@@ -106,24 +109,24 @@ header i {
 }
 
 .page-logo a {
-  display: block; /* Garante que o <a> seja um bloco, cobrindo toda a área do filho */
+  display: block;
 }
 
 .page-logo img {
   width: 100px;
-  display: block; /* Remove espaçamento indesejado ao redor da imagem */
+  display: block; 
 }
 
 nav ul {
   list-style: none;
   padding: 0;
   margin: 10px;
-  text-align: center; /* Centraliza os itens dentro do nav */
+  text-align: center; 
 }
 
 nav ul li {
   display: inline-block;
-  /* Ajuste este valor conforme necessário */
+  
 }
 
 nav ul li a {
@@ -133,13 +136,14 @@ nav ul li a {
 }
 
 nav ul li :hover{
-  color: #fff;
+  color: rgb(254, 61, 106);
   text-decoration: none;
   padding: 10px;
   font-weight: bolder;
 }
 
-/* Remove default link colors */
+
+
 .title a:link,
 .title a:visited,
 .title a:active {
