--- a/Landing_Page/src/jogos/jogos.css
+++ b/Landing_Page/src/jogos/jogos.css
@@ -7,7 +7,7 @@
   aside {
     max-width: 250px;
     padding: 20px;
-    background-color: white;
+    background-color: rgb(222, 222, 222);
     border-right: 1px solid #ddd;
     float: left;
   }
@@ -18,11 +18,9 @@
   }
   
   .game-card {
-    font-family: 'Oswald', sans-serif;
-    background-color:white;
-    border: 2px solid rgb(195, 3, 80);
+    background-color:rgb(222, 222, 222);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 5px rgb(52, 47, 48);
     margin-top: 16px;
     margin-bottom: 16px;
     overflow: hidden;
@@ -49,15 +47,21 @@
     width: 40%;
     padding: 10px;
   }
+
+  .game-title{    
+    font-family: 'Oswald', sans-serif;
+  }
   
   .fa-star {
     cursor: pointer;
     padding: 20px;
-    color: rgb(182, 178, 178);
+    color: rgb(183, 181, 181);
+    text-shadow: #000000 0px 0px 1px;
   }
   
   .favorite {
-    color: rgb(240, 240, 13);
+    color: rgb(244, 244, 7);
+    text-shadow: #000000 0px 0px 2px;
   }
   
   .price-history {
@@ -100,21 +104,49 @@
     float: right;
   }
 
-  #modal-message {
-    max-width: max-content;
-    position: fixed;
-    padding: 10px;
-    background-color: #323764;
-    top: 20%;
-    z-index: 9999;
-    text-align: center;
+  input[type="range"] {
+    display: block;
+    margin: 15px auto;
+    width: 50%;
+    appearance: none;
   }
   
-  #message-text {
-    color: white;
-    display: inline;
+  input[type="range"]:focus {
+    outline: none;
   }
   
+  input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px #000000;
+    background: rgb(195, 3, 80);
+    border-radius: 1px;
+    border: 0px solid #000000;
+  }
+  
+  input[type="range"]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid rgb(195, 3, 80);
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;        
+    background: rgb(195, 3, 80);
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7px;
+  }
+
+
+.busca{
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+}
+
 
   
 
