--- a/Landing_Page/src/modal/modal.css
+++ b/Landing_Page/src/modal/modal.css
@@ -6,14 +6,15 @@
     left: 50%;
     transform: translate(-50%, -40%);
     display: none;
-    background: #010a13a0;
-    box-shadow: 0px 4px 18px #5681b0;
-    padding: 60px;
+    background: #051424b7;
+    box-shadow: 0px 0px 20px 15px #11102a;
+    padding: 10px;
+    padding-top: 60px;
     z-index: 1;
   }
   
   .modal-form {
-    margin-bottom: 55px;
+    margin-bottom: 15px;
     display: block;
     text-align: center;
   }
@@ -32,7 +33,7 @@
     margin-top: 20px;
     border: 2px;
     border-radius: 10px;
-    cursor: pointer; /* Começar */
+    cursor: pointer; 
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -56,4 +57,19 @@
     font-size: 20px;
     line-height: 24px;
     text-align: center;
+  }
+
+  #modal-message {
+    max-width: max-content;
+    position: fixed;
+    padding: 10px;
+    background-color: #323764;
+    top: 20%;
+    z-index: 9999;
+    text-align: center;
+  }
+  
+  #message-text {
+    color: white;
+    display: inline;
   }
