inserção dos favoritos no localhost

--- a/Landing_Page/src/header/header.css
+++ b/Landing_Page/src/header/header.css
@@ -1,72 +1,136 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
 body {
-  background-color: #1b2838;
   font-family: Arial, sans-serif;
-  margin: 0 auto;
 }
 
 header {
+  padding-inline: 10%;
   background-color: #0f0d3d;
   color: white;
-  text-align: center;
-  padding: 10px;
-  position: relative;
-  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  position: relative; 
 }
 
-header h1 {
-  text-align: center;
-  padding-inline-start: 10%;
-  padding-inline-end: 10%;
-  color: white;
-  position: relative;
-  font-family: "Oswald", sans-serif;
+header nav {
+  flex: 1;
 }
 
-header i {
-  position: absolute;
-  right: 10%;
-  top: 50%;
-  transform: translateY(40%);
-  color: white;
-  font-size: medium;
-  cursor: pointer;
-}
-
-#user-menu {
-  list-style-type: none;
-  right:13%;
-  top: 65%;
+header nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  position: absolute;
-  width: 150px;
-  z-index: 1;
-  background-color: #fff0f0;
-  border: 3px solid rgb(254, 61, 106);
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-#user-menu li {
-  padding: 10px;
-  border-bottom: 1px solid rgb(254, 61, 106);
+.navbar-toggler{
+  background-color: white;
 }
 
-#user-menu li:last-child {
-  border-bottom: none;
-}
-
-#user-menu a {
-  color: #0f0d3d;
-  text-decoration: none;
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+  color: rgb(254, 61, 106);
   font-weight: bolder;
-  display: block;
 }
 
-#user-menu li:hover {
-  background-color: rgba(254, 61, 106, 0.4);
-  cursor: pointer;
+.nav-link{
+  color: white;
 }
+
+.nav-link:focus{
+  color: white;
+
+}
+.nav-link:hover {
+  color: rgb(253, 3, 3);
+
+}
+
+.dropdown-item:focus, .dropdown-item:hover {
+  background-color: rgba(0, 0, 0, 0.21);
+}
+
+header nav ul li {
+  margin: 0 1rem; 
+}
+
+header nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.625rem; 
+  transition: color 0.3s ease;
+}
+
+
+header .page-logo {
+  flex: 0 1 10%;
+}
+
+header .page-logo img {
+  width: 6.25rem;
+}
+
+header h1.title {
+  flex: 1;
+  order: 3;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+  margin: 1rem 0; 
+}
+
+header h1.title a {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.8s, color 0.2s;
+}
+
+header h1.title a:hover {
+  transform: scale(1.1);
+  color: rgb(254, 61, 106);
+}
+
+header h1.title .highlight {
+  color: rgb(195, 3, 80);
+  background-color: #fff0f0;
+  padding: 0.3125rem 0.625rem; 
+  border: 0.125rem solid rgb(254, 61, 106); 
+  border-radius: 0.3125rem; 
+  box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2); 
+  font-weight: bold;
+  text-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
+  transition: transform 0.8s, background-color 0.2s;
+}
+
+#search-form {
+  position: relative;
+  margin: 0 auto;
+  text-align: center;
+  align-items: center;
+}
+
+.busca {
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+}
+
 
 .hidden {
   display: none;
@@ -76,77 +140,27 @@ header i {
   display: block;
 }
 
-.title-text {
-  display: inline-block;
-  transition: transform 0.8s, color 0.2s;
-  color: inherit;
-  text-decoration: none;
+
+@media (max-width: 768px) {
+
+
+  header .page-logo,
+  header h1.title {
+      text-align: center;
+      order: initial;
+  }
+
+  header nav ul {
+      flex-direction: column;
+      gap: 0.625rem;
+      align-items: center;
+  }
+
+  header nav ul li {
+      margin: 0.625rem 0; 
+  }
+
+  #search-form {
+    margin-bottom: 20px;
+  }
 }
-
-.title-text .highlight {
-  color: rgb(195, 3, 80);
-  background-color: #fff0f0;
-  padding: 5px 10px;
-  border: 2px solid rgb(254, 61, 106);
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  transition: transform 0.8s, background-color 0.2s;
-}
-
-.title-text:hover {
-  transform: scale(1.1);
-  color: rgb(254, 61, 106);
-  cursor: pointer;
-}
-
-.page-logo {
-  display: inline-block;
-  position: absolute;
-  top: 20px;
-  left: 10%;
-}
-
-.page-logo a {
-  display: block;
-}
-
-.page-logo img {
-  width: 100px;
-  display: block; 
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 10px;
-  text-align: center; 
-}
-
-nav ul li {
-  display: inline-block;
-  
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px;
-}
-
-nav ul li :hover{
-  color: rgb(254, 61, 106);
-  text-decoration: none;
-  padding: 10px;
-  font-weight: bolder;
-}
-
-
-
-.title a:link,
-.title a:visited,
-.title a:active {
-  text-decoration: none;
-}
-
