--- a/Landing_Page/style.css
+++ b/Landing_Page/style.css
@@ -3,6 +3,9 @@
 @import url(/src/footer/footer.css);
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
 @import url(/src/modal/modal.css);
+@import url(/src/sobre/sobre.css);
+@import url(/src/jogos/jogos.css);
+@import url(/src/contato/contato.css);
 
 * {
   margin: 0;
@@ -71,10 +74,11 @@ i {
   margin: 0.625rem;
   border-radius: 0.625rem;
   overflow: hidden;
-  opacity: 0.4;
+  opacity: 0.2;
   transition: opacity 0.3s ease;
   color: rgba(255, 255, 255, 0);
   text-align: center;
+  z-index: 2;
 }
 
 .card p {
@@ -194,12 +198,25 @@ i {
 
   .cards {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    height: 100%
   }
 
   .card {
-    width: 5rem; 
-    height: 5rem; 
+    width: max-content; 
+    height: 4rem; 
+  }
+
+  .card-content {
+    display: inline-flex;
+    width: auto;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .card p{
+    margin: 0;
+    margin-left: 0.5rem
   }
 
   .cadastro {
